--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -11,6 +11,17 @@ body {
     width: 30px;
 }
 
+.loading-screen {
+    @apply fixed top-0 bottom-0 left-0 z-50 flex justify-center items-center text-center text-white w-full;
+    background-color: #1F1F1F;
+    transition: all 0.2s ease-in-out;
+}
+
+.loading-screen-hidden {
+    @apply hidden w-0;
+}
+
+
 /* Typo */
 h1, h2, h3, p, a {
     @apply text-white;
