--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -12,13 +12,11 @@ body {
 }
 
 .loading-screen {
-    @apply fixed top-0 bottom-0 left-0 z-50 flex justify-center items-center text-center text-white w-full;
+    @apply fixed top-0 bottom-0 left-0 z-50 flex justify-center items-center text-center text-white;
+    transform-origin: center left;
     background-color: #1F1F1F;
-    transition: all 0.2s ease-in-out;
-}
-
-.loading-screen-hidden {
-    @apply hidden w-0;
+    background-color: red;
+    opacity: 0;
 }
 
 
