[FEAT] Other projects in single project view

--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -181,6 +181,10 @@ header {
     @apply w-full h-full bg-center bg-cover bg-no-repeat;
 }
 
+.gallery-subtitle {
+    @apply mb-4 text-xl text-center;
+}
+
 /* Footer */
 footer {
     @apply container m-auto flex flex-col justify-center text-white mb-16;
